--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
 streamlit
+flask
+requests
+beautifulsoup4
+
+# APIs & Web Scraping
+google-api-python-client  
+
+# File Handling & Parsing
+PyPDF2
 pdfplumber
 python-docx
-scikit-learn
-numpy
+docx2txt
+pdfminer.six
+
+# Machine Learning & NLP
+torch
+transformers
+sentence-transformers
+nltk
+
+# Data Processing & Visualization
 pandas
+numpy
+matplotlib
+seaborn
